Fix a 'jump' on action view content

--- a/projects/real-game-player/src/reader/scenes/multi-choice-row/multi-choice-row.component.scss
+++ b/projects/real-game-player/src/reader/scenes/multi-choice-row/multi-choice-row.component.scss
@@ -1,11 +1,6 @@
 :host {
     width: 100%;
-    min-height: 100%;
-    height: 100%;
     font-size: var(--taco-font-size-225);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 :host-context(.main__reader--simple) {
@@ -14,6 +9,7 @@
 
 .choice-list--row {
     display: block;
+    min-height: 144px;
 }
 
 .container {
